feat: 正式发布0.0.2-SNAPSHOT 版本，优化代码和修改bug